fix issue with tooltip display in overflow hidden container

--- a/src/styles/modal.less
+++ b/src/styles/modal.less
@@ -179,7 +179,8 @@
         left: 0;
         right: 0;
         transition: background-color .2s;
-        overflow: auto;
+        overflow-y: auto !important;
+        overflow-x: hidden !important;
 
         &.readerOverlay {
           display: none;
